# druid-wasm-websockets-actix-toy

./: .gitignore  Cargo.toml  README.adoc  shell.nix
backend/: Cargo.toml  schema.graphql
backend/src/: backend.rs
frontend/: Cargo.toml
frontend/src/: lib.rs  toyui.rs
frontend/static/html/: index.html  index.js
src/: backend.rs
