[package]
name = "toyserve"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian May <me@bstr.eu>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "toyserve"
path = "src/backend.rs"

[dependencies]
#cfg-if = "1.0.0"
#tracing = "0.1.22"
#wasm-bindgen = "0.2.67"
#console_error_panic_hook = "0.1.6"
log = "0.4.11"
#instant = { version = "0.1.6", features = ["wasm-bindgen"] }
rust-embed = {version = "6.2.0", features = [
#"debug-embed",
"compression"] }
mime_guess = "2.0.3"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
actix = "0.10.0"
ws_stream_wasm = "0.7"

#[dependencies.actix-web-actors]
#git = "https://github.com/actix/actix-web.git"
#[dependencies.actix-web]
#git = "https://github.com/actix/actix-web.git"

#[dependencies.druid]
#version = "0.7.0"
#git = "https://github.com/linebender/druid.git"
#features = ["im",
    #"svg",
#    "png",
#    "image"]

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
simple_logger = { version = "1.9.0", default-features = false }

#[dependencies.web-sys]
#version = "0.3"
#features = ["console"]

#[patch.crates-io]
#piet = { git = "https://github.com/elrnv/piet.git" }
#piet-web = { git = "https://github.com/elrnv/piet.git" }
#piet-common = { git = "https://github.com/elrnv/piet.git" }

[profile.release]
opt-level = 's' # or 'z'
lto = true
