[package]
name = "toy"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian May <me@bstr.eu>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "toylib"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "toyui"
path = "src/toyui.rs"

[features]
default = ["console_error_panic_hook","wee_alloc", "console_log"]

[dependencies]
cfg-if = "1.0.0"
tracing = "0.1.22"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
instant = { version = "0.1.6", features = ["wasm-bindgen"] }
js-sys = "0.3"
log = "0.4"
simple_logger = "1"
console_log = { version = "0.2", optional = true }
ws_stream_wasm = "0.7"
pharos = "0.5"
graphql_client = "0.10"

#[dependencies.actix-web-actors]
#git = "https://github.com/actix/actix-web.git"
#[dependencies.actix-web]
#git = "https://github.com/actix/actix-web.git"

[dependencies.druid]
#version = "0.7.0"
git = "https://github.com/linebender/druid.git"
features = ["im",
    #"svg",
    "png",
    "image"]

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
simple_logger = { version = "1.9.0", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = ["console",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

#[patch.crates-io]
#piet = { git = "https://github.com/elrnv/piet.git" }
#piet-web = { git = "https://github.com/elrnv/piet.git" }
#piet-common = { git = "https://github.com/elrnv/piet.git" }

[profile.release]
opt-level = 'z' # or 'z'
lto = true

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
